test/bad/illegal-shadow.sam
// ERROR_COUNT: 5
// illegal-shadow.sam:9:7-9:8: [Collision]: Name `A` collides with a previously defined name.
// illegal-shadow.sam:13:12-13:16: [Collision]: Name `test` collides with a previously defined name.
// illegal-shadow.sam:18:10-18:14: [Collision]: Name `test` collides with a previously defined name.
// illegal-shadow.sam:23:12-23:16: [Collision]: Name `test` collides with a previously defined name.
// illegal-shadow.sam:29:9-29:10: [Collision]: Name `a` collides with a previously defined name.

class A {}
class A {}

class ConflictingFunctions {
  function test(): unit = ConflictingFunctions.test()
  function test(): unit = ConflictingFunctions.test()
}

class ConflictingMethods(val a: int) {
  method test(): int = 42
  method test(): int = 42
}

class ConflictingMethodsAndFunctions(val a: int) {
  method test(): int = 42
  function test(): unit = ConflictingMethodsAndFunctions.test()
}

class Main {
  function main(): unit = {
    val a = 42;
    val a = 42;
  }
}
